More modify to mohistlauncher